[add] controllers created , about to add them to the routes

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "stashbox",
     "version": "1.0.0",
     "description": "",
-    "main": "nodemon main.js",
+    "main": " main.js",
     "scripts": {
+        "start": "nodemon main.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
