--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": " main.js",
     "scripts": {
         "start": "nodemon main.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -15,5 +15,15 @@
         "express": "^4.18.1",
         "mongoose": "^6.3.3",
         "nodemon": "^2.0.16"
+    },
+    "devDependencies": {
+        "jest": "^28.1.0",
+        "supertest": "^6.2.3"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     }
 }
